<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_raceline_planner</name>
  <version>0.0.1</version>
  <description>Raceline-based global planner with Nav2 + MPPI for F1TENTH Gym, including perception-to-planning integration using f110_msgs.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>f110_msgs</depend>

  <!-- Python -->
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>

  <!-- 런타임 의존 -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>f1tenth_gym_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>